devops/fleet/overlays/istio/_opentelemetry.yaml
# https://opentelemetry.io/zh/docs/collector/configuration/#receivers
# https://github.com/open-telemetry/opentelemetry-operator/tree/main/cmd/otel-allocator#prometheuscr-specifics
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: observability
- apiVersion: opentelemetry.io/v1alpha1
  kind: OpenTelemetryCollector
  metadata:
    name: otel
    namespace: observability
  spec:
    mode: statefulset
    image: otel/opentelemetry-collector:0.99.0
    config: |-
      receivers:
        otlp:
          protocols:
            grpc: {}
            http: {}
      processors:
        batch: {}
      exporters:
        zipkin:
          endpoint: http://zipkin.istio-system.svc.cluster.local:9411/api/v2/spans
      service:
        pipelines:
          traces:
            receivers:
            - otlp
            processors:
            - batch
            exporters:
            - zipkin
- apiVersion: telemetry.istio.io/v1alpha1
  kind: Telemetry
  metadata:
    name: otel-istio
    namespace: istio-system
  spec:
    tracing:
    - providers:
      - name: otel-tracing
      randomSamplingPercentage: 1
      customTags:
        tracing:
          literal:
            value: opentelemetry
- apiVersion: opentelemetry.io/v1alpha1
  kind: OpenTelemetryCollector
  metadata:
    name: otel-sidecar
  spec:
    mode: sidecar
    image: otel/opentelemetry-collector:0.99.0
    config: |-
      receivers:
        otlp:
          protocols:
            grpc: {}
            http: {}
      processors:
        batch: {}
      exporters:
        zipkin:
          endpoint: http://zipkin.istio-system.svc.cluster.local:9411/api/v2/spans
      service:
        pipelines:
          traces:
            receivers:
            - otlp
            processors:
            - batch
            exporters:
            - zipkin
- apiVersion: opentelemetry.io/v1alpha1
  kind: Instrumentation
  metadata:
    name: java-instrumentation
  spec:
    propagators:
    - tracecontext
    - baggage
    - b3
    sampler:
      type: parentbased_always_on
    java:
      image: otel/autoinstrumentation-java:latest
      env:
      - name: OTEL_METRICS_EXPORTER
        value: otlp
