devops/fleet/overlays/istio/_otel-collector.yaml
# https://opentelemetry.io/zh/docs/collector/configuration/#receivers
# https://github.com/open-telemetry/opentelemetry-operator/tree/main/cmd/otel-allocator#prometheuscr-specifics
# https://github.com/open-telemetry/opentelemetry-java/blob/main/sdk-extensions/autoconfigure/README.md
# https://github.com/jaegertracing/jaeger/tree/main/docker-compose/monitor
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: observability
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: opentelemetry-targetallocator-sa
    namespace: observability
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: opentelemetry-targetallocator-cr
  rules:
  - apiGroups:
    - monitoring.coreos.com
    resources:
    - servicemonitors
    - podmonitors
    verbs: ["*"]
  - apiGroups: ["", "discovery.k8s.io"]
    resources: ["namespaces", "pods", "services", "endpoints", "endpointslices"]
    verbs: ["get", "list", "watch"]
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: opentelemetry-targetallocator-crb
    namespace: observability
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: opentelemetry-targetallocator-cr
  subjects:
    - kind: ServiceAccount
      name: opentelemetry-targetallocator-sa
      namespace: observability
- apiVersion: opentelemetry.io/v1beta1
  kind: OpenTelemetryCollector
  metadata:
    name: otel
    namespace: observability
  spec:
    image: otel/opentelemetry-collector-contrib:latest
    mode: statefulset
    targetAllocator:
      enabled: true
      serviceAccount: opentelemetry-targetallocator-sa
      prometheusCR:
        enabled: true
        serviceMonitorSelector:
          matchLabels:
            monitoring: metrics
    config:
      receivers:
        otlp:
          protocols:
            grpc: {}
            http: {}
        prometheus:
          target_allocator:
            endpoint: http://otel-targetallocator
            interval: 15s
            collector_id: ${POD_NAME}
      processors:
        batch: {}
      exporters:
        logging:
          verbosity: detailed
        prometheus:
          endpoint: 0.0.0.0:8889
          namespace: span_metrics
        zipkin:
          endpoint: http://zipkin.istio-system.svc.cluster.local:9411/api/v2/spans
      connectors:
        spanmetrics: {}
      service:
        pipelines:
          metrics:
            receivers: [spanmetrics]
            processors: [batch]
            exporters: [prometheus]
          traces:
            receivers: [otlp]
            processors: [batch]
            exporters: [spanmetrics, zipkin]
          logs:
            receivers: [otlp]
            processors: [batch]
            exporters: [logging]
