devops/fleet/overlays/istio/_gateway.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: mygraph-gateway
    namespace: istio-system
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
      - renlm.cn
      - www.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
    - port:
        number: 443
        protocol: HTTPS
        name: tls
      hosts:
      - kubernetes.renlm.cn
      tls:
        mode: PASSTHROUGH
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
      - renlm.cn
      - www.renlm.cn
      - jenkins.renlm.cn
      - rabbitmq.renlm.cn
      - mygraph.renlm.cn
      tls:
        mode: SIMPLE
        credentialName: istio-system.renlm.cn
        minProtocolVersion: TLSV1_2
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: mygraph-redis-gateway
    namespace: istio-system
  spec:
    selector:
      istio: redis-ingressgateway
    servers:
    - port:
        number: 31379
        protocol: TCP
        name: tcp
      hosts:
      - redis.renlm.cn
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: mygraph-mysql-gateway
    namespace: istio-system
  spec:
    selector:
      istio: mysql-ingressgateway
    servers:
    - port:
        number: 31306
        protocol: TCP
        name: tcp
      hosts:
      - mysql.renlm.cn
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: mygraph-rabbitmq-gateway
    namespace: istio-system
  spec:
    selector:
      istio: rabbitmq-ingressgateway
    servers:
    - port:
        number: 31672
        protocol: TCP
        name: tcp
      hosts:
      - rabbitmq.renlm.cn
