devops/fleet/overlays/istio/_destinationrule.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: kubernetes
    namespace: default
  spec:
    host: kubernetes.default.svc.cluster.local
    trafficPolicy:
      tls:
        mode: DISABLE
